# learn-python

./: README.md  dc-spark-submit.sh  docker-compose.yml  pyproject.toml
ScaptyAddress/: ScratchUtils.py  secondResultDict20180121_16_08_07.dat.pprint  xmlLearn.py
ScaptyAddress/logs/: logging.json
ScaptyTitle/: README.md  scaptyTitle.py  scaptyTitle2.py  test_getSinglePageText.py  titles20180523_09_14_25.json
earthquake/: docker-compose.yml  earthquake_cleaned.csv  start_notebook.sh
leetcode/: lc242.py  lc26.py  lc27.py  lc283.py  lc83.py  leecode.md
notebook/: A3-Copy1.ipynb  A3.ipynb  heatmap_demo.py  start_notebook.sh
pandas/: excel_demo.py  main.py
spark/: rdd_programming_guide.py  spark_sql_guide.py  structured_streaming_programing_guide.py
spark/dataframe/: 01_Starting_Point.py  02_Running_SQL_Programmatically.py  03_InterOperating_with_RDD.py  04_Aggregations.py  05_Data_Sources.py
spark/kafka_integration/: spark_sql_with_kafka_0-10.py  spark_stream_with_kafka_0-8.py
