[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["Jinghui Zhang <30542109+yutianaiqingtian@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
